# djangoEmpty

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  entry.sh  pyproject.toml  render.yaml  requirements.txt
core/: settings.py
deploy/management/commands/: Data.py
