[tool.poetry]
name = "djangoempty"
version = "0.1.0"
description = ""
authors = ["yaseen1998 <yasseenkouthe@eng.hu.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
