[tool.poetry]
name = "djangoempty"
version = "0.1.0"
description = ""
authors = ["yaseen1998 <yasseenkouthe@eng.hu.edu.jo>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
dj-database-url = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
